# Arcade

./: .gitignore  CMakeLists.txt  README.md  main.cpp  scores.txt
.github/workflows/: test-project-compilation.yml
include/: Arcade.hpp  DLLoader.hpp  IDisplayModule.hpp  IGamesModule.hpp  IGraphicsModule.hpp  Keys.hpp  Libraries.hpp  Logger.hpp  Map.hpp  Metadata.hpp  Position.hpp
lib_bar/: CMakeLists.txt  bar.cpp
lib_baz/: CMakeLists.txt  baz.cpp
lib_foo/: CMakeLists.txt  foo.cpp
mapping/: map.nbl  map.pcm  map1.nbl  map1.pcm
src/: main.cpp  utils.cpp
src/core/: Core.cpp  Core.hpp  Scoreboard.cpp  Scoreboard.hpp
src/games/nibbler/: CMakeLists.txt  Nibbler.cpp  Nibbler.hpp
src/games/pacman/: CMakeLists.txt  Pacman.cpp  Pacman.hpp
src/graphics/ncurses/: CMakeLists.txt  Ncurses.cpp  Ncurses.hpp
src/graphics/sdl2/: CMakeLists.txt  Sdl2.cpp  Sdl2.hpp
src/graphics/sfml/: CMakeLists.txt  Pixel.hpp  Sfml.cpp  Sfml.hpp
